added trevor's stats

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <p>Superpower: traveling space and time.</p>
       <p>Dream Pet: Nibbler</p>
     </section>
+    <section>
+        <h3>Trevor</h3>
+        <p>Superpower: Patience.</p>
+        <p>Dream Pet: Yoshi</p>
+      </section>
   </article>
 </body>
 </html>
